fix(style): hide table cell content if too long

--- a/src/components/logs-viewer/index.less
+++ b/src/components/logs-viewer/index.less
@@ -26,11 +26,11 @@
   }
 
   .xterm {
-    height: 100% !important;
+    // height: 100% !important;
 
     .xterm-viewport {
       overflow-y: auto !important;
-      // custom scrollbar
+
       &::-webkit-scrollbar {
         width: var(--scrollbar-size);
         height: var(--scrollbar-size);
