--- a/src/global.less
+++ b/src/global.less
@@ -665,6 +665,10 @@ body {
 
 .ant-modal {
   max-width: 100vw;
+
+  .ant-modal-title {
+    font-weight: var(--font-weight-bold);
+  }
 }
 
 .tooltip-wrapper {
